# DA-s-project-1

./: .doxygen-file  .gitignore  CMakeLists.txt  Graph.h  Presentation.pptx  README.md  data1.csv  parser  parser.cpp
html/: Tui_8cpp.js  Tui_8h.html  Tui_8h.js  Tui_8h_source.html  adapter_8cpp.html  adapter_8h.html  adapter_8h.js  adapter_8h_source.html  annotated.html  annotated_dup.js  classAdapter-members.html  classAdapter.html  classAdapter.js  classMaxFlow-members.html  classMaxFlow.html  classMaxFlow.js  classParser-members.html  classParser.html  classParser.js  classTool-members.html  classTool.html  classTool.js  classTui-members.html  classTui.html  classTui.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  index.html  mainMenuTui_8h_source.html  maxFlow_8h.html  (+27 more)
include/: Graph.h  Tui.h  adapter.h  application.h  mainMenuTui.h  maxFlow.h  parser.h  tool.h
latex/: adapter_8h.tex  annotated.tex  classAdapter.tex  classMaxFlow.tex  classParser.tex  classTool.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  maxFlow_8h.tex  parser_8h.tex  refman.tex  structcontrol__.tex  structoutput.tex  structparameters__.tex  structreviewer.tex  structsubmission.tex  tool_8h.tex
resources/: data1.csv  data2.csv  data3.csv  data4.csv
src/: Tui.cpp  adapter.cpp  application.cpp  main.cpp  mainMenuTui.cpp  maxFlow.cpp  myProg.cpp  (+2 more)
(+134 files in other folders)
